@@ -1,12 +1,12 @@
 package work.lishubin.smart4j.framework.utils;
 
-import com.sun.xml.internal.ws.spi.db.TypeInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.lang.reflect.Parameter;
 
 /**
  * 反射工具类
@@ -26,8 +26,8 @@ public class ReflectionUtils {
     public static <T> T getNewInstance(Class<T> cls){
         T instance = null;
         try {
-            instance = cls.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            instance = cls.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             LOGGER.error(" Instancing failure",e);
         }
         return instance;
@@ -36,8 +36,17 @@ public class ReflectionUtils {
     public static Object  invokeMethod(Object target, Method method,Object... params){
 
         Object result = null;
+
         try {
-            result = method.invoke(target, params);
+            Parameter[] parameters = method.getParameters();
+            if (parameters!=null && parameters.length!= 0){
+                for (Parameter parameter : parameters) {
+                    if ("params".equals(parameter.getName())){
+                        result = method.invoke(target, params);
+                    }
+                }
+            }
+            result = method.invoke(target);
         } catch (IllegalAccessException | InvocationTargetException e) {
             e.printStackTrace();
         }
